classDiagram
    direction TB

    namespace Infrastructure_REST {
        class OrdemServicoResourceImpl {
            +associarItens(ordemServicoId, AssociarItensReqDTO) Response
        }
    }

    namespace Infrastructure_CrossCutting {
        class AuditoriaProxy {
            <<cross-cutting>>
            +envolver(T, Class~T~, RegistrarAuditoriaPort) T
            -interceptar(method, args) Any
        }
    }

    namespace Application_Ports_In {
        class AssociarItensOrdemServicoUseCase {
            <<interface>>
            +associarItens(ordemServicoId, AssociarItensReqDTO) OrdemServicoResDTO
        }
    }

    namespace Application_Service {
        class AssociarItensOrdemServicoService {
            +associarItens(ordemServicoId, AssociarItensReqDTO) OrdemServicoResDTO
            -validarMecanicoVinculado(os, solicitanteId)
            -validarStatusEmDiagnostico(os)
        }
    }

    namespace Application_Service_Support {
        class AssociadorItensOrdemServico {
            <<colaborador compartilhado>>
            +associar(os, servicos, insumos)
            -removerItensAnteriores(os)
            -adicionarServicos(os, servicos)
            -adicionarInsumos(os, insumos)
            -validarEstoque(insumo, quantidade)
        }
    }

    namespace Application_Ports_Out {
        class JwtPort {
            <<interface>>
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryPort {
            <<interface>>
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class ServicoRepositoryPort {
            <<interface>>
            +buscarPorId(ServicoId) Servico?
        }
        class InsumoRepositoryPort {
            <<interface>>
            +buscarPorId(InsumoId) Insumo?
        }
        class RegistrarAuditoriaPort {
            <<interface>>
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    namespace Domain {
        class OrdemServico {
            <<aggregate root>>
            +status StatusOrdemServico
            +obterMecanicoId() UsuarioId
            +obterStatus() StatusOrdemServicoEnum
            +adicionarServico(ServicoId, ValorMonetario)
            +removerServico(ServicoId)
            +adicionarInsumo(InsumoId)
            +removerInsumo(InsumoId)
            +listarServicos() List~ItemOrdemServico~
            +listarInsumos() List~InsumoId~
        }
    }

    namespace Infrastructure_Adapters {
        class JwtAdapter {
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryAdapter {
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class ServicoRepositoryAdapter {
            +buscarPorId(ServicoId) Servico?
        }
        class InsumoRepositoryAdapter {
            +buscarPorId(InsumoId) Insumo?
        }
        class AuditoriaRepositoryAdapter {
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    OrdemServicoResourceImpl --> AssociarItensOrdemServicoUseCase : invoca

    AuditoriaProxy ..|> AssociarItensOrdemServicoUseCase : wrap (Java Proxy)
    AuditoriaProxy --> AssociarItensOrdemServicoService : delega execução
    AuditoriaProxy --> RegistrarAuditoriaPort : notifica após @Auditavel

    AssociarItensOrdemServicoService ..|> AssociarItensOrdemServicoUseCase : implementa
    AssociarItensOrdemServicoService --> JwtPort : getUsuarioId()
    AssociarItensOrdemServicoService --> OrdemServicoRepositoryPort : buscarPorId() atualizar()
    AssociarItensOrdemServicoService --> AssociadorItensOrdemServico : associar()

    AssociadorItensOrdemServico --> ServicoRepositoryPort : buscarPorId()
    AssociadorItensOrdemServico --> InsumoRepositoryPort : buscarPorId()
    AssociadorItensOrdemServico --> OrdemServico : adicionarServico() adicionarInsumo()

    JwtAdapter ..|> JwtPort : implementa
    OrdemServicoRepositoryAdapter ..|> OrdemServicoRepositoryPort : implementa
    ServicoRepositoryAdapter ..|> ServicoRepositoryPort : implementa
    InsumoRepositoryAdapter ..|> InsumoRepositoryPort : implementa
    AuditoriaRepositoryAdapter ..|> RegistrarAuditoriaPort : implementa
